tempo/unpackaged/objects/CloneObject__c.object
<CustomObject>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>My_Address__c</fullName>
        <label>My Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objectnumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MainObject</label>
        <referenceTo>MainObject__c</referenceTo>
        <relationshipLabel>CloneObjects</relationshipLabel>
        <relationshipName>CloneObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CloneObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CloneObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloneObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>